<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_rec_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yper.feng.growup.Activity.AddRecMain"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/titleday"
                    android:layout_marginLeft="141dp"
                    android:id="@+id/txtTitle"
                    android:layout_marginStart="141dp"
                    android:layout_marginTop="12dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="33dp"
                    android:layout_marginStart="33dp"
                    android:id="@+id/txtActiondate"
                    android:layout_below="@+id/txtTitle"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="11dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtactioncheckteacher"
                    android:layout_marginLeft="44dp"
                    android:layout_marginStart="44dp"
                    android:layout_alignBaseline="@+id/txtActiondate"
                    android:layout_alignBottom="@+id/txtActiondate"
                    android:layout_toRightOf="@+id/txtTitle"
                    android:layout_toEndOf="@+id/txtTitle" />


            </RelativeLayout>


            <ListView
                android:layout_width="match_parent"
                android:id="@+id/list_stu_common_action"
                android:layout_height="200dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal"
                android:id="@+id/classlist"
                android:layout_marginLeft="5dp">


                <TextView
                    android:text="@string/qixin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/txtclass1" />

                <TextView
                    android:text="@string/class81"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtclass2"
                    android:layout_weight="1" />

                <TextView
                    android:text="@string/class82"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtclass3"
                    android:layout_weight="1" />

                <TextView
                    android:text="@string/class83"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtclass4"
                    android:layout_weight="1" />

                <TextView
                    android:text="@string/class91"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtclass5"
                    android:layout_weight="1" />

                <TextView
                    android:text="@string/class92"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtclass6"
                    android:layout_weight="1" />

                <TextView
                    android:text="@string/class93"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtclass7"
                    android:layout_weight="1" />

            </LinearLayout>

            <GridView
                android:id="@+id/mygridview"
                android:numColumns="3"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:stretchMode="columnWidth"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:descendantFocusability="beforeDescendants"
                android:layout_height="160dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/ic_menu_camera"
                    android:id="@+id/imageView2"
                    android:layout_marginLeft="18dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="16dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView30"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_toRightOf="@+id/imageView2"
                    android:layout_toEndOf="@+id/imageView2"
                    android:text="@string/promptdaypic" />

            </RelativeLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btndaycommonsave"
                    android:layout_weight="1"
                    android:text="@string/promptsave"
                    android:onClick="save"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btndaycommoncancel"
                    android:layout_weight="1"
                    android:text="@string/promptcancel"
                    android:onClick="cancel" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
