<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pin_photo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yper.feng.growup.Activity.PinPhotoActivity"
    android:orientation="vertical"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                app:srcCompat="@mipmap/no_pic"
                android:id="@+id/photopic"
                android:layout_height="281dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:id="@+id/alreadypins">

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/list_alreadypins" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:text="@string/promptpinto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/photopic"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="11dp"
                    android:id="@+id/textView3" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:orientation="horizontal"
                    android:id="@+id/classlist"
                    android:layout_marginLeft="5dp">


                    <TextView
                        android:text="@string/qixin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/txtclass1" />

                    <TextView
                        android:text="@string/class81"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtclass2"
                        android:layout_weight="1" />

                    <TextView
                        android:text="@string/class82"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtclass3"
                        android:layout_weight="1" />

                    <TextView
                        android:text="@string/class83"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtclass4"
                        android:layout_weight="1" />

                    <TextView
                        android:text="@string/class91"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtclass5"
                        android:layout_weight="1" />

                    <TextView
                        android:text="@string/class92"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtclass6"
                        android:layout_weight="1" />

                    <TextView
                        android:text="@string/class93"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtclass7"
                        android:layout_weight="1" />

                </LinearLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <GridView
                        android:id="@+id/mygridview"
                        android:numColumns="3"
                        android:gravity="center_horizontal"
                        android:layout_width="match_parent"
                        android:stretchMode="columnWidth"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_height="140dp" />

                </RelativeLayout>

                <TextView
                    android:text="@string/promptpinaction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="11dp"/>


            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/autoCompleteTextView"
                        android:drawableLeft="@android:drawable/ic_menu_search"
                        android:layout_weight="1" />

                    <Button
                        android:text="搜"
                        android:layout_height="wrap_content"
                        android:id="@+id/button2"
                        android:layout_weight="1"
                        android:layout_width="80dp" />
                </LinearLayout>

                <ListView
                    android:layout_width="match_parent"
                    android:id="@+id/android:list"
                    android:layout_height="200dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
